Card Section Done

--- a/index.html
+++ b/index.html
@@ -273,6 +273,83 @@
         
       </div>
     </div>
+
+    <!-- Card Sections -->
+
+    <div class="container">
+      <div class="heading text-center py-5">
+        <h3 class="text-white">We Offer The Best Quality Service For You</h3>
+        <p class="text-white-50">Take our Services and Try Your Luck. You won't Be Loss. We providing Best Quality Service with Advanced <br> Experience and Modern UI. Explore Our Services.</p>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-04.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">Crafted For Stratups</h5>
+              <p class="card-text text-white-50">Craft Info: You will find over 1400 Free Craft projects for all Seasons and Major Holidays or Celebrations of The Year</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-05.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">Hign Quality Design</h5>
+              <p class="card-text text-white-50">When looking Info The Product Design and Innovation Field. We usually see an Overly Saturated and Overwheming Market That is Full of Different Products.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-06.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">An Essential Sections</h5>
+              <p class="card-text text-white-50">A Project Description is a High-level Overview of Why You're Doing a Project. The Document Explain A Project's Objectives and Its Essentials Qualities.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-07.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">Speed Optimizaiton</h5>
+              <p class="card-text text-white-50">Optimization Aims at Adding or Removing Content Your Text, To Better Match Search Engine Expections. Text Optimizer is simple, fast and Efficient.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-06.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">Fully Customizable</h5>
+              <p class="card-text text-white-50">Customize Definition, To Modify or Build According To Individual or Personal Specifications or Preference: To Customize an Automobile.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 p-5">
+            <img src="img/icon-05.svg" class="card-img-top img-icon" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-white py-3">Regular Update</h5>
+              <p class="card-text text-white-50">If You Update Something, You Make It More Modern, Usually By Adding New Parts To It Or Giving New Information</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
    
 
     
