Plan Section Done

--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
     </div>
 
     <!-- Plan Section -->
+
     <div class="plan-section">
       <!-- <img src="img/shape-12.svg" alt=""> -->
       <div class="container">
@@ -413,6 +414,8 @@
       </div>
       
     </div>
+
+    <!-- Offer Section -->
    
 
     
