offer Section Done

--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@
     <!-- Plan Section -->
 
     <div class="plan-section">
-      <!-- <img src="img/shape-12.svg" alt=""> -->
       <div class="container">
 
         <img class="py-5" src="img/shape-06.svg" alt="">
@@ -416,6 +415,33 @@
     </div>
 
     <!-- Offer Section -->
+
+    <div class="container align-items-center">
+      <div class="offer-heading mt-5 py-5 text-center">
+        <h1 class="text-white">We Offer Great Affordable Premium Prices.</h1>
+        <p class="text-white-50">Choose A Premium Plans and Stay with Us and Get Regular Update for your Business or Anything.</p>
+      </div>
+
+      <div class="button-section d-flex justify-content-between">
+        <button class="btn btn-primary offer-buttons ps-3">All</button>
+        <button class="btn offer-buttons ps-3 text-white-50">Branding Strategy</button>
+        <button class="btn offer-buttons ps-3 text-white-50">Digital Experience</button>
+        <button class="btn offer-buttons ps-3 text-white-50">Ecommerce</button>
+      </div>
+
+      <div class="grid-container my-5">
+        <div class="grid-item"><img class="img-fluid" src="img/blog-01.png" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/blog-05.png" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/blog-03.png" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/blog-04.png" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/blog-big.jpg" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/digit.jpg" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/Ecommerce-DG.jpg" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/R.jpg" alt=""></div>
+        <div class="grid-item"><img class="img-fluid" src="img/project-02.png" alt=""></div>
+      </div>
+
+    </div>
    
 
     
