Testimonial Section Done

--- a/index.html
+++ b/index.html
@@ -442,6 +442,49 @@
       </div>
 
     </div>
+
+    <!-- Testimonial Section -->
+
+    <div class="container">
+      <div class="testimonial-heading text-center">
+        <h1 class="text-white">Client Testimonial</h1>
+        <p class="text-white-50">Whether You're Shopping for The Best Type of Hiking Boots, Interior Decorating Tips, or A New Favorite Resturant, Chances are You'll Turn to Review <br>Sites to Find The Option with the Most 5-Star Reviews and Customer Recommendations.</p>
+      </div>
+
+      <div id="carouselExample" class="carousel slide p-5">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-4">
+                <img src="img/team-01.jpg" class="d-block img-fluid" alt="...">
+              </div>
+              <div class="col-8">
+                <img src="img/icon-quote.svg" alt="">
+                <p class="text-white-50 py-5">Each Landscaping LLC. At The End of The Day, If You're an SMB, Your Testimonial Page Shouldn't Break The Bank. You Don't Have To Build Out An Entirely New Sector.</p>
+                <h2 class="text-white">Olivia Andrium</h2>
+                <p class="text-white-50">Product Manager @Amd</p>
+                <img class="img-fluid test-image" src="img/brand-light-03.svg" alt="">
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-4">
+                <img src="img/team-03.jpg" class="d-block img-fluid" alt="...">
+              </div>
+              <div class="col-8">
+                <img src="img/icon-quote.svg" alt="">
+                <p class="text-white-50 py-5">Each Landscaping LLC. At The End of The Day, If You're an SMB, Your Testimonial Page Shouldn't Break The Bank. You Don't Have To Build Out An Entirely New Sector.</p>
+                <h2 class="text-white">Avi Pestarica</h2>
+                <p class="text-white-50">Product Manager @Mandiri</p>
+                <img class="img-fluid test-image" src="img/brand-light-05.svg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
    
 
     
