Logo Section Done

--- a/index.html
+++ b/index.html
@@ -446,12 +446,12 @@
     <!-- Testimonial Section -->
 
     <div class="container">
-      <div class="testimonial-heading text-center">
+      <div class="testimonial-heading text-center py-5">
         <h1 class="text-white">Client Testimonial</h1>
         <p class="text-white-50">Whether You're Shopping for The Best Type of Hiking Boots, Interior Decorating Tips, or A New Favorite Resturant, Chances are You'll Turn to Review <br>Sites to Find The Option with the Most 5-Star Reviews and Customer Recommendations.</p>
       </div>
 
-      <div id="carouselExample" class="carousel slide p-5">
+      <div id="carouselExample" class="carousel slide p-5 mt-5">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
@@ -525,6 +525,24 @@
         </div>
       </div>
     </div>
+
+    <!-- Logo Section -->
+    <div class="container">
+      <div class="logo-heading pt-5 mt-5 text-center">
+        <p class="text-white-50">As An Icon In The Technology Industry, Representing A Commitment to Innovation, Progress, And Customer Experience. Products Such As Them Have Revolutionized The Way We Use Technology, And The Brand Exudes A Sense of Sophistication And Simplicity.</p>
+      </div>
+      <div class="row my-5">
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-01.svg" alt=""></div>
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-02.svg" alt=""></div>
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-03.svg" alt=""></div>
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-04.svg" alt=""></div>
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-05.svg" alt=""></div>
+        <div class="col-6 col-md-4 col-lg-2 py-4 py-lg-0"><img src="img/brand-light-06.svg" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
+    
    
 
     
