Blog Section Done

--- a/index.html
+++ b/index.html
@@ -542,8 +542,61 @@
     </div>
     <hr>
 
-    
+    <!-- Blog Section -->
    
+    <div class="container pt-5">
+      <div class="blog-heading text-center">
+        <h2 class="text-white py-4">Latest Blogs & News</h2>
+        <p class="text-white-50">Ecommerce Newsletter Examples. Stitches N Giggles. 69b Boutique. Mulligan's Pharmacy. Brick and Mortar Retailer Newsletter</p>
+      </div>
+
+      <div class="row justify-content-center" id="blog">
+        <div class="col-12 col-md-6 col-lg-3 pe-4 pb-3 blog-items me-3 mt-4 mt-lg-0">
+          <img class="img-fluid" src="img/blog-01.png" alt="">
+          <div class="d-flex justify-content-between py-3 ps-2">
+            <div class="col-6 p-0">
+              <img src="img/icon-man.svg" alt="">
+              <p class="text-white-50 d-inline text-center">Dhaka City</p>
+            </div>
+            <div class="col-6 p-0">
+              <img src="img/icon-calender.svg" alt="">
+              <p class="text-white-50 d-inline text-center">17 JUNE 2023</p>
+            </div>
+          </div>
+          <h6 class="text-white ps-2">Free Advertising For Your Online Business</h6>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 pe-4 pb-3 blog-items me-3 mt-4 mt-lg-0">
+          <img class="img-fluid" src="img/blog-01.png" alt="">
+          <div class="d-flex justify-content-between py-3 ps-2">
+            <div class="col-6 p-0">
+              <img src="img/icon-man.svg" alt="">
+              <p class="text-white-50 d-inline text-center">Dhaka City</p>
+            </div>
+            <div class="col-6 p-0">
+              <img src="img/icon-calender.svg" alt="">
+              <p class="text-white-50 d-inline text-center">17 JUNE 2023</p>
+            </div>
+          </div>
+          <h6 class="text-white ps-2">Free Advertising For Your Online Business</h6>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 pe-4 pb-3 blog-items me-3 mt-4 mt-lg-0">
+          <img class="img-fluid" src="img/blog-01.png" alt="">
+          <div class="d-flex justify-content-between py-3 ps-2">
+            <div class="col-6 p-0">
+              <img src="img/icon-man.svg" alt="">
+              <p class="text-white-50 d-inline text-center">Dhaka City</p>
+            </div>
+            <div class="col-6 p-0">
+              <img src="img/icon-calender.svg" alt="">
+              <p class="text-white-50 d-inline text-center">17 JUNE 2023</p>
+            </div>
+          </div>
+          <h6 class="text-white ps-2">Free Advertising For Your Online Business</h6>
+        </div>
+      </div>
+    </div>
 
     
 
