--- a/index.html
+++ b/index.html
@@ -675,6 +675,23 @@
       </div>
     </div>
 
+    <!-- Footer-1 Section -->
+
+    <div class="footer-1 pt-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 col-md-8 py-5">
+            <h1 class="text-white pb-5">Join With 5000+ Startups Growing With <br> Base.</h1>
+            <p class="text-white">The Goal of A Business Description's To Introduce Any Reader To Your Company--And To Do That <br> Quickly. So When You're Getting Started Writing This Desceiption, It's A Good Idea To List Out The <br> Basic Information That You'll Need To Include.</p>
+          </div>
+
+          <div class="col-12 col-md-4 text-center">
+            <button class="footer-button">get started now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
