--- a/index.html
+++ b/index.html
@@ -692,7 +692,85 @@
       </div>
     </div>
 
-    
+    <!-- Footer-2 Section -->
+
+    <div class="container py-5">
+      <div class="row">
+
+        <div class="col-3">
+          <div class="icon-div d-flex align-items-center">
+            <img class="logo me-1" src="img/logo.png" alt="">
+            <h4 class="">Base</h4>
+          </div>
+
+          <p class="text-white-50">Creative UI/UX Design We Have. Make For Your Own Now.</p>
+
+          <div class="icon-group pb-5">
+            <i class="fa-brands fa-facebook-f mx-3" style="color: #dcdfe54b;"></i>
+            <i class="fa-brands fa-twitter mx-3" style="color: #dcdfe54b;"></i>
+            <i class="fa-brands fa-linkedin-in mx-3" style="color: #dcdfe54b;"></i>
+            <i class="fa-brands fa-behance mx-3" style="color: #dcdfe54b;"></i>
+          </div>
+        </div>
+
+        <div class="col-2">
+          <h4 class="text-white">Quick Links</h4>
+          <ul>
+            <li class="text-white-50">Home</li>
+            <li class="text-white-50">Product</li>
+            <div class="d-flex">
+              <li class="text-white-50">Career</li>
+              <button class="career-button">Hiring</button>
+            </div>
+            <li class="text-white-50">Pricing</li>
+          </ul>
+        </div>
+
+        <div class="col-2">
+          <h4 class="text-white">Service</h4>
+          <ul>
+            <li class="text-white-50">Web Design & Development</li>
+            <li class="text-white-50">Graphics Design</li>
+            <li class="text-white-50">Digital Marketing</li>
+            <li class="text-white-50">UI/UX Design</li>
+          </ul>
+        </div>
+
+        <div class="col-2">
+          <h4 class="text-white">Support</h4>
+          <ul>
+            <li class="text-white-50">Company</li>
+            <li class="text-white-50">Press Media</li>
+            <li class="text-white-50">Our Blogs</li>
+            <li class="text-white-50">Contact Us</li>
+          </ul>
+        </div>
+
+        <div class="col-3">
+          <h4 class="text-white">News Letter</h4>
+          <p class="text-white-50">Subscribe To Receive Future <br>Update</p>
+
+          <div class="row">
+            <button class="email-button">Email</button>
+            <!-- <img class="img-fluid" src="img/send.png" alt=""> -->
+          </div>
+        </div>
+
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-6">
+          <p class="text-white-50 p-2 d-inline">English</p>
+          <p class="text-white-50 p-2 d-inline">Privacy Policy</p>
+          <p class="text-white-50 p-2 d-inline">Support</p>
+        </div>
+        <div class="col-6 ">
+          <p class="text-white-50 p-2">@2023 All Right Reserved By Arafat</p>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
