--- a/index.html
+++ b/index.html
@@ -750,9 +750,12 @@
           <h4 class="text-white">News Letter</h4>
           <p class="text-white-50">Subscribe To Receive Future <br>Update</p>
 
-          <div class="row">
-            <button class="email-button">Email</button>
-            <!-- <img class="img-fluid" src="img/send.png" alt=""> -->
+          <div class="email">
+            <input type="email" placeholder="Email">
+            <div class="icon-div">
+              <i class="fa-solid fa-paper-plane icon" style="color: #5d5e61;"></i>
+            </div>
+            
           </div>
         </div>
 
@@ -767,7 +770,7 @@
           <p class="text-white-50 p-2 d-inline">Support</p>
         </div>
         <div class="col-6 ">
-          <p class="text-white-50 p-2">@2023 All Right Reserved By Arafat</p>
+          <p class="text-white-50 p-2 footer-text">@2023 All Right Reserved By Arafat</p>
         </div>
       </div>
     </div>
